First multi-chain version

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf artifacts cache coverage coverage.json",
     "test": "NODE_ENV=test npx hardhat test",
     "test:gas": "NODE_ENV=test GAS_REPORT=yes npx hardhat test",
-    "compile": "npx hardhat compile",
+    "compile": "NODE_ENV=test npx hardhat compile",
     "lint": "npm run lint:sol && npm run lint:js",
     "lint:sol": "prettier --write 'contracts/**/*.sol' && solhint 'contracts/**/*.sol'",
     "lint:js": "npx prettier --write ./test/**/*.js ./**/*.js",
@@ -28,14 +28,13 @@
   "homepage": "https://github.com/cruna-cc/cruna-nft-sample#readme",
   "license": "MIT",
   "devDependencies": {
-    "@cruna/protocol": "^0.1.1",
-    "@metamask/eth-sig-util": "^7.0.1",
-    "@openzeppelin/contracts": "^5.0.1",
-    "erc6551": "^0.3.1",
+    "@cruna/protocol": "^0.1.5",
     "@ethersproject/contracts": "^5.7.0",
+    "@metamask/eth-sig-util": "^7.0.1",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@openzeppelin/contracts": "^5.0.1",
     "@openzeppelin/contracts-upgradeable": "^5.0.1",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@openzeppelin/test-helpers": "^0.5.16",
@@ -44,6 +43,7 @@
     "case": "^1.6.3",
     "chai": "^4.3.10",
     "dotenv": "^16.3.1",
+    "erc6551": "^0.3.1",
     "eth-deploy-utils": "1.0.0-beta.11",
     "eth-sig-util": "^3.0.1",
     "ethereum-waffle": "^4.0.10",
@@ -63,7 +63,8 @@
     "rimraf": "^5.0.5",
     "solhint": "^4.0.0",
     "solidity-coverage": "^0.8.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "wormhole-solidity-sdk": "^0.0.2"
   },
   "lint-staged": {
     "*.js": "prettier --write",
