--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/ndujaLabs/guardians-of-agdaroth-contracts#readme",
   "license": "MIT",
   "devDependencies": {
-    "@cruna/protocol": "^0.1.6",
+    "@cruna/protocol": "^0.1.7",
     "@ethersproject/contracts": "^5.7.0",
     "@metamask/eth-sig-util": "^7.0.1",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
@@ -44,7 +44,7 @@
     "chai": "^4.3.10",
     "dotenv": "^16.3.1",
     "erc6551": "^0.3.1",
-    "eth-deploy-utils": "1.0.0-beta.11",
+    "eth-deploy-utils": "^1.0.0",
     "eth-sig-util": "^3.0.1",
     "ethereum-waffle": "^4.0.10",
     "ethereumjs-abi": "^0.6.8",
